--- a/packages/reconstruction/applications/CMakeLists.txt
+++ b/packages/reconstruction/applications/CMakeLists.txt
@@ -1,4 +1,5 @@
 
     ADD_EXECUTABLE(reconstruction reconstruction.cc)
     ADD_EXECUTABLE(reconstructionDWI reconstructionDWI.cc)
+    ADD_EXECUTABLE(reconstructionb0T2dist reconstructionb0T2dist.cc)
 
