updating distortion correction

--- a/packages/reconstruction/applications/CMakeLists.txt
+++ b/packages/reconstruction/applications/CMakeLists.txt
@@ -1,5 +1,6 @@
 
     ADD_EXECUTABLE(reconstruction reconstruction.cc)
     ADD_EXECUTABLE(reconstructionDWI reconstructionDWI.cc)
-    ADD_EXECUTABLE(reconstructionb0T2dist reconstructionb0T2dist.cc)
+    ADD_EXECUTABLE(estimate-distortion estimate-distortion.cc)
+    #ADD_EXECUTABLE(reconstructionb0T2dist reconstructionb0T2dist.cc)
 
