--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ packages/reconstruction/applications/CMakeLists.txt
 packages/reconstruction/applications/reconstruction-diffcode.cc
 packages/reconstruction/include/irtkReconstruction-diffcode.h
 packages/reconstruction/src/irtkReconstruction-diffcode.cc
+packages/reconstruction/applications/.estimate-distortion.cc.kate-swp
